--- a/content/cluster/PGC_1070.md
+++ b/content/cluster/PGC_1070.md
@@ -68,8 +68,7 @@
 <p>Protein length: 488</p>
 <p>Product: Fumarate reductase flavoprotein subunit</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=1.3.5.4">1.3.5.4</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Actinobacteriota; Coriobacteriia; Coriobacteriales; Eggerthellaceae; Adlercreutzia; Adlercreutzia equolifaciens</p>
 <p>Geography: Spain, Europe</p>
 
@@ -84,8 +83,7 @@
 <p>Protein length: 305</p>
 <p>Product: Protein FixB</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Actinobacteriota; Coriobacteriia; Coriobacteriales; Eggerthellaceae; Adlercreutzia; Adlercreutzia equolifaciens</p>
 <p>Geography: Spain, Europe</p>
 
@@ -100,8 +98,7 @@
 <p>Protein length: 240</p>
 <p>Product: hypothetical protein</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Actinobacteriota; Coriobacteriia; Coriobacteriales; Eggerthellaceae; Adlercreutzia; Adlercreutzia equolifaciens</p>
 <p>Geography: Spain, Europe</p>
 
@@ -116,8 +113,7 @@
 <p>Protein length: 151</p>
 <p>Product: hypothetical protein</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Actinobacteriota; Coriobacteriia; Coriobacteriales; Eggerthellaceae; Adlercreutzia; Adlercreutzia equolifaciens</p>
 <p>Geography: Spain, Europe</p>
 
