--- a/content/cluster/PGC_135.md
+++ b/content/cluster/PGC_135.md
@@ -33,8 +33,7 @@
 <p>Protein length: 809</p>
 <p>Product: Anaerobic glycerol-3-phosphate dehydrogenase subunit B</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=1.1.5.3">1.1.5.3</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes; Bacilli; Lactobacillales; Enterococcaceae; Enterococcus_D; Enterococcus_D sp002850555</p>
 <p>Geography: China, Asia</p>
 
