--- a/content/cluster/PGC_291.md
+++ b/content/cluster/PGC_291.md
@@ -33,8 +33,7 @@
 <p>Protein length: 203</p>
 <p>Product: NADH-dependent flavin reductase subunit 1</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=1.5.1.36">1.5.1.36</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes; Bacilli; Lactobacillales; Enterococcaceae; Enterococcus_C; Enterococcus_C massiliensis</p>
 <p>Geography: NA, NA</p>
 
