--- a/content/cluster/PGC_346.md
+++ b/content/cluster/PGC_346.md
@@ -18,8 +18,7 @@
 <p>Protein length: 451</p>
 <p>Product: Beta-glucosidase A</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=3.2.1.21">3.2.1.21</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Oscillospirales; Ruminococcaceae; Faecalibacterium; Faecalibacterium prausnitzii_C</p>
 <p>Geography: Denmark, Europe</p>
   </div>
@@ -34,8 +33,7 @@
 <p>Protein length: 398</p>
 <p>Product: Oleandomycin glycosyltransferase</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=2.4.1.-">2.4.1.-</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Oscillospirales; Ruminococcaceae; Faecalibacterium; Faecalibacterium prausnitzii_C</p>
 <p>Geography: Denmark, Europe</p>
 
