--- a/content/cluster/PGC_353.md
+++ b/content/cluster/PGC_353.md
@@ -33,8 +33,7 @@
 <p>Protein length: 415</p>
 <p>Product: hypothetical protein</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes; Bacilli; Lactobacillales; Streptococcaceae; Streptococcus; Streptococcus parasanguinis_B</p>
 <p>Geography: Spain, Europe</p>
 
