--- a/content/cluster/PGC_705.md
+++ b/content/cluster/PGC_705.md
@@ -19,8 +19,7 @@
 <p>Protein length: 148</p>
 <p>Product: hypothetical protein</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Lachnospirales; Lachnospiraceae; Blautia_A; Blautia_A wexlerae</p>
 <p>Geography: NA, NA</p>
   </div>
@@ -35,8 +34,7 @@
 <p>Protein length: 280</p>
 <p>Product: Inosose dehydratase</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=4.2.1.44">4.2.1.44</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Lachnospirales; Lachnospiraceae; Blautia_A; Blautia_A wexlerae</p>
 <p>Geography: NA, NA</p>
 
