--- a/content/cluster/PGC_818.md
+++ b/content/cluster/PGC_818.md
@@ -49,8 +49,7 @@
 <p>Protein length: 132</p>
 <p>Product: hypothetical protein</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Lachnospirales; Lachnospiraceae; Blautia; Blautia hominis</p>
 <p>Geography: United States, North America</p>
 
