--- a/content/cluster/PGC_879.md
+++ b/content/cluster/PGC_879.md
@@ -19,8 +19,7 @@
 <p>Protein length: 1086</p>
 <p>Product: hypothetical protein</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Bacteroidota; Bacteroidia; Bacteroidales; Bacteroidaceae; Prevotella; Prevotella sp002251385</p>
 <p>Geography: China, Asia</p>
   </div>
