--- a/content/cluster/PGC_950.md
+++ b/content/cluster/PGC_950.md
@@ -20,8 +20,7 @@
 <p>Protein length: 1580</p>
 <p>Product: Glucosyltransferase-SI</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=2.4.1.5">2.4.1.5</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes; Bacilli; Lactobacillales; Streptococcaceae; Streptococcus; Streptococcus salivarius</p>
 <p>Geography: China, Asia</p>
   </div>
