--- a/content/cluster/PGC_997.md
+++ b/content/cluster/PGC_997.md
@@ -68,8 +68,7 @@
 <p>Protein length: 278</p>
 <p>Product: Inosose dehydratase</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=4.2.1.44">4.2.1.44</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Oscillospirales; Oscillospiraceae; UBA9475; </p>
 <p>Geography: China, Asia</p>
 
