--- a/content/cluster/PGC_999.md
+++ b/content/cluster/PGC_999.md
@@ -20,8 +20,7 @@
 <p>Protein length: 933</p>
 <p>Product: hypothetical protein</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Lachnospirales; Lachnospiraceae; Blautia_A; Blautia_A sp900066335</p>
 <p>Geography: Mongolia, Asia</p>
   </div>
