--- a/content/cluster/PGC_1003.md
+++ b/content/cluster/PGC_1003.md
@@ -20,8 +20,7 @@
 <p>Protein length: 131</p>
 <p>Product: hypothetical protein</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Lachnospirales; Lachnospiraceae; Blautia; Blautia hominis</p>
 <p>Geography: United States, North America</p>
   </div>
@@ -36,8 +35,7 @@
 <p>Protein length: 320</p>
 <p>Product: hypothetical protein</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Lachnospirales; Lachnospiraceae; Blautia; Blautia hominis</p>
 <p>Geography: United States, North America</p>
 
