--- a/content/cluster/PGC_1015.md
+++ b/content/cluster/PGC_1015.md
@@ -20,8 +20,7 @@
 <p>Protein length: 649</p>
 <p>Product: NADH oxidase</p>
 <p>EC: NA</p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Lachnospirales; Lachnospiraceae; Blautia_A; </p>
 <p>Geography: Russia, Europe</p>
   </div>
@@ -36,8 +35,7 @@
 <p>Protein length: 330</p>
 <p>Product: Beta-glucoside kinase</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=2.7.1.85">2.7.1.85</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Lachnospirales; Lachnospiraceae; Blautia_A; </p>
 <p>Geography: Russia, Europe</p>
 
