--- a/content/cluster/PGC_292.md
+++ b/content/cluster/PGC_292.md
@@ -18,8 +18,7 @@
 <p>Protein length: 180</p>
 <p>Product: Oleandomycin glycosyltransferase</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=2.4.1.-">2.4.1.-</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_I; Bacilli_A; Paenibacillales; Paenibacillaceae; Paenibacillus; Paenibacillus ihuae</p>
 <p>Geography: NA, NA</p>
   </div>
