--- a/content/cluster/PGC_354.md
+++ b/content/cluster/PGC_354.md
@@ -18,8 +18,7 @@
 <p>Protein length: 284</p>
 <p>Product: Demethyllactenocin mycarosyltransferase</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=2.4.1.318">2.4.1.318</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Oscillospirales; Oscillospiraceae; ER4; ER4 sp900317525</p>
 <p>Geography: Spain, Europe</p>
   </div>
