--- a/content/cluster/PGC_357.md
+++ b/content/cluster/PGC_357.md
@@ -18,8 +18,7 @@
 <p>Protein length: 350</p>
 <p>Product: scyllo-inositol 2-dehydrogenase (NADP(+)) IolW</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=1.1.1.371">1.1.1.371</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Lachnospirales; Lachnospiraceae; Eisenbergiella; Eisenbergiella sp900066775</p>
 <p>Geography: China, Asia</p>
   </div>
