--- a/content/cluster/PGC_878.md
+++ b/content/cluster/PGC_878.md
@@ -49,8 +49,7 @@
 <p>Protein length: 693</p>
 <p>Product: Arylsulfate sulfotransferase AssT</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=2.8.2.22">2.8.2.22</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Firmicutes_A; Clostridia; Lachnospirales; Lachnospiraceae; Blautia_A; Blautia_A sp900066165</p>
 <p>Geography: China, Asia</p>
 
