--- a/content/cluster/PGC_998.md
+++ b/content/cluster/PGC_998.md
@@ -65,8 +65,7 @@
 <p>Protein length: 489</p>
 <p>Product: Fumarate reductase flavoprotein subunit</p>
 <p>EC: <a href="https://www.brenda-enzymes.org/enzyme.php?ecno=1.3.5.4">1.3.5.4</a></p>
-<p>Pfam: <a href="http://pfam.xfam.org/family/Not Detected">Not Detected</a></p>
-
+<p>Pfam: Not Detected</p>
 <p>Lineage: Bacteria; Actinobacteriota; Coriobacteriia; Coriobacteriales; Eggerthellaceae; CAG-1427; CAG-1427 sp000435475</p>
 <p>Geography: Mongolia, Asia</p>
 
